policies/tests/require-drop-all-capabilities/resource-pass.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: capabilities-secure-pod
  namespace: tenant-alpha
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - "ALL"
