policies/tests/require-drop-all-capabilities/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-drop-all-capabilities-test
policies:
  - policy.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: require-drop-all-capabilities
    rule: require-drop-all
    resource: capabilities-secure-pod
    kind: Pod
    result: pass
  - policy: require-drop-all-capabilities
    rule: require-drop-all
    resource: capabilities-insecure-pod
    kind: Pod
    result: fail
